--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Michael Yonker"
+title                    : ""
 title_separator          : "-"
 name                     : &name "Michael Yonker"
-description              : &description ""
+description              : &description "Biogeochemistry PhD Student"
 url                      : https://yonkaadonk.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "yonkaadonk/yonkaadonk.github.io"
