--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : ""
 title_separator          : "-"
 name                     : &name "Michael Yonker"
-description              : &description "Biogeochemistry PhD Student"
+description              : &description ""
 url                      : https://yonkaadonk.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "yonkaadonk/yonkaadonk.github.io"
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Michael Yonker"
   pronouns         : "he/him"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Biogeochemistry PhD Student"
   location         : "Chicago, IL"
   employer         : "University of Illinois Chicago"
   uri              : # URL
