--- a/_config.yml
+++ b/_config.yml
@@ -8,13 +8,15 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : ""
+title                    : "Home"
 title_separator          : "-"
 name                     : &name "Michael Yonker"
 description              : &description ""
 url                      : https://yonkaadonk.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "yonkaadonk/yonkaadonk.github.io"
+theme                    : minimal-mistakes-jekyll
+minimal_mistakes_skin    : "air"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
