--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "yonkaadonk/yonkaadonk.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "headshot.png"
+  avatar           : "headshot.jpg"
   name             : "Michael Yonker"
   pronouns         : "he/him"  
   bio              : "Biogeochemistry PhD Student"
