--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Home"
-title_separator          : "-"
+title                    : "Michael Yonker"
 name                     : &name "Michael Yonker"
 description              : &description ""
 url                      : https://yonkaadonk.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
@@ -22,7 +21,7 @@ repository               : "yonkaadonk/yonkaadonk.github.io"
 author:
   # Biographic information
   avatar           : "headshot.jpg"
-  name             : "Michael Yonker"
+  name             : ""
   pronouns         : "he/him"  
   bio              : "Biogeochemistry PhD Student"
   location         : "Chicago, IL"
